--- a/Lesson14-电商网站头部导航/css/style.css
+++ b/Lesson14-电商网站头部导航/css/style.css
@@ -62,15 +62,9 @@ li.goods{background-position:10px -235px}
 .prosul li .prosmore a:hover{background-color:#d03322;color:#fff}
 .prosmore em{font-weight:400;padding-top:9px;display:inline-block}
 .prosmore em.morehot{background:url(../images/icon-hot-more.png) right top no-repeat;padding-right:22px}
-/* index - banner */
+/*banner */
 .full_banner{width:100%; position:relative; height:416px; background:#FFF; overflow:hidden;}
 .full_banner .bd{margin:0 auto; position:relative; z-index:0; overflow:hidden;}
 .full_banner .bd ul{width:100% !important;}
 .full_banner .bd li{width:100% !important; float:left; height:450px; overflow:hidden; text-align:center;}
 .full_banner .bd li a{ display:block; height:450px;}
-.full_banner .hd{width:100%; position:absolute; z-index:1; bottom:0; left:0; height:30px; line-height:30px; text-align:center;}
-.full_banner .hd ul{text-align:center; padding-top:5px;}
-.full_banner .hd ul li{cursor:pointer; display:inline-block; *display:inline; zoom:1; width:8px; height:8px; margin:5px; background:url(../images/tg_flash_p.png) -18px 0; overflow:hidden; 
-line-height:9999px; 
-}
-.full_banner .hd ul .on{background-position:0px 0px;}
